tests/istio_testcases/example_policies/bookinfo-demo/sidcar_examples/bookinfo-productpage-sidecar-2.yaml
apiVersion: networking.istio.io/v1beta1
kind: Sidecar
metadata:
  name: bookinfo-productpage-sidecar-2
spec:
  workloadSelector:
    labels:
      app: productpage
  egress:
    - hosts:
        - "./ratings.default.svc.cluster.local"
