tests/istio_testcases/example_policies/bookinfo-demo/sidcar_examples/bookinfo-reviews-sidecar.yaml
apiVersion: networking.istio.io/v1beta1
kind: Sidecar
metadata:
  name: bookinfo-reviews-sidecar
spec:
  workloadSelector:
    labels:
      app: reviews
  egress:
    - hosts:
      - "./ratings.default.svc.cluster.local"
