tests/istio_testcases/example_policies/bookinfo-demo/sidcar_examples/bookinfo-select-nothing-sidecar.yaml
apiVersion: networking.istio.io/v1beta1
kind: Sidecar
metadata:
  name: bookinfo-selects-nothing-sidecar
spec:
  workloadSelector:
    labels:
      app: payments
  egress:
    - hosts:
      - "./ratings.default.svc.cluster.local"
