tests/istio_testcases/example_policies/bookinfo-demo/sidcar_examples/global-sidecar-from-istio-ref.yaml
apiVersion: networking.istio.io/v1beta1
kind: Sidecar
metadata:
  name: default
  namespace: istio-config
spec:
  egress:
  - hosts:
    - "./*"
    - "istio-system/*"
